--- a/wapm.toml
+++ b/wapm.toml
@@ -1,6 +1,6 @@
 [package]
 name = "openssl"
-version = "1.1.0h"
+version = "0.1.0"
 description = "OpenSSL is a robust, commercial-grade, and full-featured toolkit for the Transport Layer Security (TLS) and Secure Sockets Layer (SSL) protocols"
 readme = "README.md"
 repository = "https://github.com/wapm-packages/OpenSSL"
